Closed Bug 827918 Opened 11 years ago Closed 11 years ago

Fix unitiaialized variables in AZPC

Categories

(Core :: Graphics, defect)

x86_64
Windows 8
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: romaxa, Assigned: romaxa)

Details

Attachments

(1 file)

Found some uninitialized variables in AZPC and GestureListener
mDelayPanning, mTapStartTime
Attachment #699328 - Flags: review?(bugzilla)
Comment on attachment 699328 [details] [diff] [review]
Fix uninit var use

Review of attachment 699328 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/ipc/GestureEventListener.cpp
@@ +33,5 @@
>  GestureEventListener::GestureEventListener(AsyncPanZoomController* aAsyncPanZoomController)
>    : mAsyncPanZoomController(aAsyncPanZoomController),
>      mState(GESTURE_NONE),
>      mSpanChange(0.0f),
> +    mTapStartTime(0),

Not too important due to code flow, but sure.
Attachment #699328 - Flags: review?(bugzilla) → review+
https://hg.mozilla.org/mozilla-central/rev/eeb1d2f81cf5
Assignee: nobody → romaxa
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: