Bug 827918 - Fix unitiaialized variables in AZPC. r=drs